---------------------------------------------------------------------------------------------------
Version: 1.11.0
Date: ???

  Changes:
    - Resistance update applies to all walls and gates. 50% resistance to all

---------------------------------------------------------------------------------------------------
Version: 1.10.7
Date: 2021-12-17

  Bugfixes:
    - Fix a crash when enemy couldn't build a new base in base build processor.

---------------------------------------------------------------------------------------------------
Version: 1.10.6
Date: 2021-12-15

  Bugfixes:
    - Fix a crash when LevelManager.get_calculated_current_level() > max_level in level slider.

---------------------------------------------------------------------------------------------------
Version: 1.10.5
Date: 2021-11-30

  Changes:
    - Added "bob-pierce" and "plasma" resistance support for enemy units, max 90% (Bob Warfare resistance support)
    - Adjusted K2's 'radioactive' and 'kr-explosion' resistance from max 95% to max 90%
    - Adjusted initial values for above resistances

---------------------------------------------------------------------------------------------------
Version: 1.10.4
Date: 2021-11-27

  Bugfixes:
    - Fixed a crash when build group called start_moving()

---------------------------------------------------------------------------------------------------
Version: 1.10.3
Date: 2021-11-26

  Changes:
    - Time based custom attack group starts at level 3, instead of level 2.  Gives more time to prepare for roboports.
    - Changed [Time Based Attack] Add points by % default from 3% to 2% per minute.

  Bugfixes:
    - Fixed a crash on data load when "enable vanilla biter" is off.
    - added biter_factions to incompatible.  It created enemy forces which are not compatible with this mod's logic processors.

---------------------------------------------------------------------------------------------------
Version: 1.10.2
Date: 2021-11-21

  Bugfixes: