@@ -74,8 +74,8 @@ enemyracemanager-max-hitpoint-multipliers=Enemy hitpoints multiplier. \n\nRange:
 enemyracemanager-damage-multipliers=Enemy Damage Multiplier. \n\nRange: 1 - 10, Default: 1
 enemyracemanager-running-speed-multipliers=Enemy Running/Flying speed multiplier.  If you are using ultra long range turrets (K2 for example), you should adjust the enemy speed to have a fair fight.  \n\nRange: 1 - 3, Default: 1
 
-enemyracemanager-max-gathering-groups=Map setting: Max Gathering Group.  Base game defaults 30. Higher value may have performance implication.   \n\nRange: 5 - 60, Default: 15
-enemyracemanager-max-group-size=Map setting: Max Group Size.  Base game defaults 200. Higher value may have performance implication.  \n\nRange: 50 - 600, Default: 100
+enemyracemanager-max-gathering-groups=Map setting: Max Gathering Group.  Base game defaults 30. Higher value may have performance implication.  When you increase this number, you should lower max group size number.  \n\nRange: 2 - 50, Default: 15
+enemyracemanager-max-group-size=Map setting: Max Group Size.  Base game defaults 200. Higher value may have performance implication.  When you increase this number, you should lower max groups number. \n\nRange: 50 - 1000, Default: 100
 
 enemyracemanager-mapping-method=This option controls how enemy are spawn when new chunk is mapped. \n[font=default-bold]Default[/font] - All races are mixed together. \n[font=default-bold]2 Races Split[/font] - 2 defined races. Positive axis and Negative axis. \n[font=default-bold]4 Races Split[/font] - 4 defined races at each boundary. Top left, top right, bottom left, bottom right. \n[font=default-bold]1 race / surface[/font] - Each surface has its assigned race. The mod makes sure the spawned unit spawners and worms matches the assigned race.
 enemyracemanager-2way-group-enemy-orientation=This option controls whether races are divided by (X-axis) East/West or (Y-axis) North/South.
